# meChatServer

./: CMakeLists.txt  README.md  make.sh
src/: chatserver.cpp  chatserver.h  database.cpp  database.h  main.cpp
